--- a/blogapp/app/views/posts/index.html.erb
+++ b/blogapp/app/views/posts/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>Posts</h1>
+<% @posts.each do |post| %>
+  <h1><%= link_to post.title, post_path(post.id) %></h1>
+  <h1><%= post.author %></h2>
+    <p><%= post.description %></p>
+    <br>
+<% end %>
