as far as we got in class

--- a/blogapp/app/views/posts/show.html.erb
+++ b/blogapp/app/views/posts/show.html.erb
@@ -1,3 +1,11 @@
 <h1><%= @post.title %></h1>
 <h2><%= @post.author %></h2>
 <p><%= @post.description %></p>
+
+<%= link_to 'Edit Post', edit_post_path(@post.id) %>
+<%= link_to 'Delete Post', @post, method: :delete %>
+
+<% @post.comments.each do |comment| %>
+  <h3><%= comment.author %></h3>
+  <p><%= comment.message %></p>
+<% end %>
